# lightweight-pipeline

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  README.org  api.html  genindex.html  index.html  main.py  minimal_example.html  objects.inv  output_management.html  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  trivial_example.html  use.html
.doctrees/: api.doctree  environment.pickle  index.doctree  minimal_example.doctree  output_management.doctree  quickstart.doctree  trivial_example.doctree  use.doctree
.github/workflows/: documentation.yml  release.yml
_modules/: index.html
_modules/lw_pipeline/: config.html  discovery.html  main.html  output_manager.html  output_registration.html  pipeline.html  pipeline_data.html  pipeline_mne_bids_data.html  pipeline_step.html
_sources/: api.rst.txt  output_management.rst.txt  quickstart.rst.txt
controller/: config.py  pipeline_data.py  pipeline_step.py
doc/: Makefile  api.rst  conf.py  index.rst  minimal_example.rst  output_management.rst  quickstart.rst  trivial_example.rst  use.rst
doc/_templates/: custom-module-template.rst
example/: example_config.py
examples/: minimal_example.md  presentation.md
examples/minimal/: Makefile  config.py  run.ipynb
examples/output_management/: README.md  config.py  test_output_management.py
examples/steps/: 02_analysis.py  __init__.py
examples/trivial/: config.py
helper/: datastructures_helper.py  mne.py  naming.py  report.py
lw_pipeline/: __init__.py  __main__.py  config.py  discovery.py  main.py  output_manager.py  output_registration.py  pipeline.py  pipeline_data.py  pipeline_mne_bids_data.py  pipeline_step.py
model/: config.py  pipeline_data.py  pipeline_element.py  pipeline_step.py
steps/: 00_bids_conversion.py  01_preprocessing.py  02_analysis.py
tasks/: 00_bids_conversion.py  00_preprocessing.py  01_analysis.py  01_preprocessing.py
(+28 files in other folders)
