[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs", "hatchling"]

[project]
authors = [{name = "The Lightweight Pipeline developers"}]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]
dependencies = []
description = "A lightweight, easy to modify pipeline controller for data processing (e.g. eeg, meg, etc.)."
dynamic = ["version"]
keywords = [
  "eeg",
  "ieeg",
  "meg",
  "neuroimaging",
  "neuroscience",
]
license = {text = "BSD-3-Clause"}
maintainers = [
  {email = "jb.kordass@gmail.com", name = "J.-B. Kordaß"},
]
name = "lw-pipeline"
readme = {content-type = "text/markdown", file = "README.md"}
requires-python = ">=3.11"
scripts = {lw_pipeline = "lw_pipeline.__main__:main"}

[project.optional-dependencies]
dev = ["lw_pipeline[doc,full]", "pre-commit"]
doc = [
  "sphinx>=7.4.7"
]
full = [
  "mne_bids",
]

[project.urls]

[tool.hatch.build]
exclude = [
  "**/tests",
  "/.*",
  "/CITATION.cff",
  "/CONTRIBUTING.md",
  "/doc",
  "/examples",
  "/Makefile",
  "/paper",
]

[tool.hatch.metadata]
allow-direct-references = true  # allow specifying URLs in our dependencies

[tool.hatch.version]
raw-options = {version_scheme = "release-branch-semver"}
source = "vcs"

[tool.ruff.lint]
exclude = ["__init__.py"]
ignore = ["A002"]
select = ["A", "D", "E", "F", "I", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.tomlsort]
all = true
ignore_case = true
spaces_before_inline_comment = 2
trailing_comma_inline_array = true
